--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1,h2,h3,h4,h5,h6{
 }
 a{
     display: inline-block;
+    text-decoration: none;
 }
 p{
     margin-bottom: 0;
@@ -136,6 +137,10 @@ footer .footer-sec{
 /* second-sec */
 .second-sec{
     position: relative;
+}
+.second-sec .icon-box a{
+    width: 100%;
+    height: 100%;
 }
 .second-sec:before {
     content: '';
