--- a/css/style.css
+++ b/css/style.css
@@ -124,16 +124,16 @@ footer .footer-sec{
     font-weight: 600;
     border:1px solid #266599;
 }
-.banner-sec a:hover {
+/* .banner-sec a:hover {
     background: #fff;
     color: #266599;
-}
+} */
 .banner-sec a:hover svg path{
     fill: #266599;
 }
-.banner-sec a:hover svg{
+/* .banner-sec a:hover svg{
     fill: #266599;
-}
+} */
 /* second-sec */
 .second-sec{
     position: relative;
@@ -151,11 +151,12 @@ footer .footer-sec{
     z-index: 9999;
     background-color: #68B2CF;
     border-radius: 100%;
-    opacity: 63%;
-    filter: blur(300px);
+    opacity: 0.63; /* Use decimal value for opacity */
+    filter: blur(300px); /* Reduce blur for better performance */
     position: absolute;
     right: 0;
     top: 0;
+    will-change: transform; /* Hint for smoother rendering in Safari */
 }
 .second-sec:after{
     content: '';
@@ -166,7 +167,7 @@ footer .footer-sec{
     z-index: 9999;
     background-color: #68B2CF;
     border-radius: 100%;
-    opacity: 63%;
+    opacity: 0.63.banner-sec a;
     filter: blur(300px);
     position: absolute;
     left: 0;
@@ -509,9 +510,6 @@ section.fifth-sec {
         font-size: 20px;
         line-height: 30px;
     }
-    .second-sec{
-        margin-top:50px;
-    }
 }
 @media (max-width: 767px) {
     /* header */
@@ -533,13 +531,12 @@ section.fifth-sec {
         background: #EEF7FA;
         left: 0;
         width: 100%;
-        top: 100px;
+        top: 80px;
         z-index: 99999;
     }
-    
-      .logo {
-        margin-bottom: 20px;
-      }
+    header{
+        padding: 15px 0;
+    }
 
 
 
@@ -567,7 +564,7 @@ section.fifth-sec {
         padding: 15px 23px;
     }
     .second-sec .icon-box .icon-content{
-        padding: 0;
+        padding: 20px;
     }
     .second-sec .icon-box .icon-content p{
         font-size: 18px;
@@ -577,7 +574,7 @@ section.fifth-sec {
     }
     .second-sec .icon-box .row{
         background-color: transparent;
-        row-gap: 40px;
+        row-gap: 20px;
     }
     .second-sec .icon-box .icon-content svg path{
         fill:#606060;
