--- a/css/style.css
+++ b/css/style.css
@@ -342,11 +342,12 @@ section.dell {
     padding:72px 0 90px 0;
 }
 .four-sec .img-content-sec{
-    display: flex;
-    gap: 18px;
-    padding-top: 60px;
-    justify-content: space-between;
+    overflow: hidden;
+    transition: all 1s ease;
     width: 100%;
+    display: flex;
+    gap:20px;
+    margin-top: 60px;
 }
 .four-sec .img-content-sec .img-content h4{
     color: #FFFFFF;
@@ -355,19 +356,26 @@ section.dell {
     font-weight: 700;
     padding: 25px 0;
 }
-.four-sec .img-content-sec .img-content {
-    width: 100%; 
+.four-sec .img-content-sec .img-content { 
+    transition: width 1s ease;
+    width: 60%; 
+    overflow: hidden;
 }
-
+.four-sec .img-content-sec .img-wrapper {
+    overflow: hidden;
+}
 .four-sec .img-content-sec .img-content img {
     width: 100%;
-    border-radius: inherit;
-    transition: transform 0.5s ease; /* Transition only the transform property */
+    height: 420px;
+    object-fit: cover; 
 }
 
 .four-sec .img-content-sec .img-content img:hover {
-    transform: scale(1.1); /* Zooms in the image by 10% */
-    /* No border-radius specified here, so it retains the original 22px border-radius */
+    /* transform: scale(1.1);  */
+}
+
+.default-zoom {
+    width: 100%; /* Default zoom width */
 }
 .four-sec .img-content-sec .img-content .img-wrapper {
     overflow: hidden; /* Hide overflow to respect border-radius */
@@ -552,50 +560,6 @@ section.six-sec:before {
     width: 100%;
    }
 }
-@media only screen and (max-width: 991px) {
-    .common-title h3{
-        font-size: 30px;
-        line-height: 40px;
-    }
-    .third-sec .about-content p{
-        margin-bottom: 25px;
-        font-size: 20px;
-        line-height: 30px;
-    }
-    .banner-sec .banner-title h1{
-        line-height: 40px;
-    }
-    .second-sec .icon-box .icon-content p{
-        line-height: 25px;
-        padding-top: 5px;
-        font-size: 20px;
-    }
-        /* header */
-        .main-menu ul {
-            display: none !important; /* Hide menu initially */
-            flex-direction: column !important;
-            gap: 20px !important;
-          }
-        
-          .menu-toggle {
-            display: block; /* Show menu toggle button */
-          }
-        
-          /* Open the menu when active */
-          .main-menu.active ul {
-            display: flex !important;
-            position: absolute;
-            height: 100%;
-            background: #EEF7FA;
-            left: 0;
-            width: 100%;
-            top: 80px;
-            z-index: 99999;
-        }
-        header{
-            padding: 15px 0;
-        }
-}
 @media only screen and (max-width: 1024px) {
     .container {
         padding: 0 50px;
@@ -652,6 +616,78 @@ section.six-sec:before {
         margin-top: 50px !important;
     }
 }
+@media only screen and (max-width: 991px) {
+    .common-title h3{
+        font-size: 30px;
+        line-height: 40px;
+    }
+    .third-sec .about-content p{
+        margin-bottom: 25px;
+        font-size: 20px;
+        line-height: 30px;
+    }
+    .banner-sec .banner-title h1{
+        line-height: 40px;
+    }
+    .second-sec .icon-box .icon-content p{
+        line-height: 25px;
+        padding-top: 5px;
+        font-size: 20px;
+    }
+    /* header */
+    .main-menu ul {
+        display: none !important; /* Hide menu initially */
+        flex-direction: column !important;
+        gap: 20px !important;
+        }
+    
+        .menu-toggle {
+        display: block; /* Show menu toggle button */
+        }
+    
+        /* Open the menu when active */
+        .main-menu.active ul {
+        display: flex !important;
+        position: absolute;
+        height: 100%;
+        background: #EEF7FA;
+        left: 0;
+        width: 100%;
+        top: 80px;
+        z-index: 99999;
+    }
+    header{
+        padding: 15px 0;
+    }
+    .four-sec .img-content-sec{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .four-sec .img-content-sec .img-content{
+        width: 100% !important;
+        text-align: center;
+    }
+    .four-sec .explore {
+        padding: 8px 25px;
+        font-size: 20px;
+        line-height: 30px;
+        display: table;
+        margin: 40px auto 0;
+    }
+    .four-sec .img-content-sec .img-content p {
+        font-size: 24px;
+        line-height: 30px;
+    }
+    .four-sec .img-content-sec .img-content h4 {
+        font-size: 28px;
+        line-height: 34px;
+        padding: 15px 0;
+    }
+    .four-sec .img-content-sec .img-content img{
+        height: auto;
+    }
+}
+
 @media (max-width: 767px) {
     .container {
         padding: 0 20px;
@@ -807,13 +843,6 @@ section.six-sec:before {
     .four-sec .img-content-sec .img-content p{
         font-size: 16px;
         line-height: 20px;
-    }
-    .four-sec .explore{
-        padding: 8px 25px;
-        font-size: 20px;
-        line-height: 30px;
-        display: table;
-        margin:40px auto 0;
     }
     .fifth-sec .service p{
         font-size: 20px;
